test/analyze/type_check/match/divergence.exp
Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:44:13-46:5
 44 | /     | "c" -> if (true) {
    | |              ^^^^^^^^^^^
 45 | |       return;
    | | ^^^^^^^^^^^^^
 46 | |     }
    | \ ^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:47:13-50:5
 47 | /     | "d" -> if (true) {
    | |              ^^^^^^^^^^^
 48 | |       return;
    | | ^^^^^^^^^^^^^
 49 | |     } else {
    | | ^^^^^^^^^^^^
 50 | |     }
    | \ ^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:51:11-54:5
 51 | /     | _ -> if (true) {
    | |            ^^^^^^^^^^^
 52 | |     } else {
    | | ^^^^^^^^^^^^
 53 | |       return;
    | | ^^^^^^^^^^^^^
 54 | |     }
    | \ ^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:76:15-79:5
 76 | /     | false -> {
    | |                ^
 77 | |       1;
    | | ^^^^^^^^
 78 | |       2;
    | | ^^^^^^^^
 79 | |     }
    | \ ^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:111:15-119:5
 111 | /     | false -> match (true) {
     | |                ^^^^^^^^^^^^^^
 112 | |       | true -> match (true) {
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 113 | |         | true -> return
     | | ^^^^^^^^^^^^^^^^^^^^^^^^
 ...   |
 118 | |       }
     | | ^^^^^^^
 119 | |     }
     | \ ^^^^^^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/match/divergence.myte:124:15-132:5
 124 | /     | false -> match (true) {
     | |                ^^^^^^^^^^^^^^
 125 | |       | true -> match (true) {
     | | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 126 | |         | true -> return
     | | ^^^^^^^^^^^^^^^^^^^^^^^^
 ...   |
 131 | |       | false -> return
     | | ^^^^^^^^^^^^^^^^^^^^^^^
 132 | |     }
     | \ ^^^^^^